# romeo_grasper

./: CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  README.md~  distance_of_distance.m  globalsearch.m  loadparams.m  package.xml  package.xml~  setup.py  transformation.m  transformation.m~
Report/: README.md  TFM.aux  TFM.bbl  TFM.bcf  TFM.blg  TFM.lof  TFM.lot  TFM.out  TFM.run.xml  TFM.tex  TFM.tex.bak  TFM.toc  TFM.toc.bak  dcm_driver_flow.aux
Report/images/: Romeo-ROS.eps  Romeo.eps  V4R-ROS.eps  arm_link.eps  dcm_driver.eps  dcm_driver_flow.aux  dcm_driver_flow.dia  dcm_driver_flow.tex  model_object_diagram.aux  model_object_diagram.dia  model_object_diagram.tex  model_object_diagram.tex.aux  model_object_transform.aux  model_object_transform.dia  model_object_transform.tex  move_control_overview.eps  moveit_actions_ROS.eps  moveit_actions_grasp_plan.aux  moveit_actions_grasp_plan.dia  moveit_actions_grasp_plan.tex  moveit_actions_pick_action.aux  moveit_actions_pick_action.dia  moveit_actions_pick_action.tex  moveit_actions_reach_action.aux  moveit_actions_reach_action.dia  moveit_actions_reach_action.tex  moveit_internal.eps  naoqi_driver.eps  object_tracker.eps  package_design.eps  plan_execute_function_flow.aux  plan_execute_function_flow.dia  plan_execute_function_flow.tex  pose_controller.eps  pose_preknown.aux  pose_preknown.dia  pose_preknown.tex  setup_romeo_grasper.aux  setup_romeo_grasper.dia  setup_romeo_grasper.tex
config/: DCM_connection.yaml  moveit.rviz  romeo_grasper.yaml  romeo_grasper_demo.yaml  romeo_grasper_demo.yaml~  romeo_grasper_real.yaml  romeo_grasper_real.yaml~
data/matlab/: distance.m  function_to_min.m  globalsearch.m  loadparams.m  nonlinealconstraint.m  transformation.m  transformation_elbow.m
data/models/dino/: model_config.yaml  model_config.yaml~
data/models/ref_tea_box/: model_config.yaml  model_config.yaml~
data/models/reference1/: tracking_model.ao
data/models/tea_box/: model_config.yaml  model_config.yaml~
data/test_data/: references_poses.txt  references_poses_45.txt  references_poses_front.txt
include/romeo_grasper/: romeograsper.h  romeograspingobject.h  romeosimulator.h  romeosimulatorstate.h
include/romeo_moveit_actions/: action.hpp
launch/: moveit_rviz.launch  moveit_rviz.launch~  romeo_grasper.launch  romeo_grasper_demo.launch  romeo_grasper_demo.launch~  romeo_grasper_demo_full.launch  romeo_grasper_demo_full.launch~  romeo_grasper_full.launch  romeo_grasper_real.launch  romeo_grasper_real.launch~  romeo_grasper_real_full.launch  romeo_grasper_real_full.launch~  rviz_demo.launch  rviz_demo.launch~  rviz_real.launch  rviz_real.launch~
msg/: VisualTable.msg
src/: experiment1.py  modeledobject.cpp  romeoGrasper.py~  romeo_grasper_driver.cpp  romeo_grasper_object.py~  romeograsper.cpp  romeograspingobject.cpp  romeosimulator.cpp  romeosimulatorstate.cpp
