<?xml version="1.0"?>
<package>
  <name>romeo_grasper</name>
  <version>0.0.1</version>
  <description>The romeo_grasper package has the aim to allow the Romeo robot to grasp objects recognised by the V4R software</description>

  <author email="l.salord.quetglas@gmail.com">Lluis Salord Quetglas</author>
  <maintainer email="l.salord.quetglas@gmail.com">Lluis Salord Quetglas</maintainer>

  <license>MIT</license>

  <url type="bugtracker">https://github.com/lluissalord/romeo_grasper/issues</url>
  <url type="repository">https://github.com/lluissalord/romeo_grasper.git</url>


  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
<!--  <build_depend>romeo_moveit_actions</build_depend> -->
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>object_tracker_msg_definitions</build_depend>
  <build_depend>naoqi_bridge_msgs</build_depend>
<!--  <build_depend>moveit</build_depend> -->
  <build_depend>message_generation</build_depend>

<build_depend>moveit_simple_grasps</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>romeo_bringup</run_depend>
<!--  <run_depend>romeo_moveit_actions</run_depend> -->
  <run_depend>romeo_moveit_config</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>object_tracker_srv_definitions</run_depend>
  <run_depend>object_tracker_msg_definitions</run_depend>
  <run_depend>naoqi_bridge_msgs</run_depend>
<!--  <run_depend>moveit</run_depend> -->
  <run_depend>message_runtime</run_depend>

<run_depend>moveit_simple_grasps</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
